Log of Changes to CGIwrap:
-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
Changes since 3.24:
   Added support for attaching a label to syslog log messages.
   Added code to rewrite the PATH_TRANSLATED environment variable.

Changes since 3.23:
   Added support for logging to syslog.

Changes since 3.22:
   Setgroups was being used no matter what you said in configure - fixed
   Problem with undefined variables in Log call for subdirectories - fixed
   Removed declaration of sys_errlist, and errno in util.c, since I don't 
think they were necessary. And they were causing problems on some 
architectures.
   Added in user contributed host address checking code
   Upgraded to using dist-3.0 PL60 for building the Configure script.
   Separated initgroups() and setgroups() checks into two separate 
defines, and improved documentation in configure script for these options.

Changes since 3.21:
   argv[0] is now automatically changed to the name of the script that is
being executed

Changes since 3.2:
   Rlimit defines weren't set properly when rlimit not available - fixed
   The optimizer/debugger flag wasn't being used in the makefile -- fixed
   Defaults for checks (y/n) were not being set - fixed
   
Changes since 3.11:
   MAJOR code cleanup and simplification. The code should be ALOT easier to 
read and understand.
   Fixed the problem in the Makefile on certain architectures with the $(var)
not being escaped properly. This should solve problems with Linux 
machines and BSD machines that I know of.
   Changes way PATH_INFO is modified, CGIwrap will now correct SCRIPT_NAME 
for ?user=USER&script=SCRIPT type requests as well as /user/script type 
requests.
   Subdirectories are now supported for both types of requests
   Debugging output has been condensed and is a little easier to read.
   Documentation has been reworked, it should be a little easier to use.
   Fixed prototypes for all the functions in the cgiwrap source.