@@ -1,0 +1,9 @@
+      Users are permitted to use crontab if their names appear in the file
+      /usr/lib/cron/cron.allow.  If that file does not exist, the file
+      /usr/lib/cron/cron.deny is checked to determine if the user should be
+      denied access to crontab.  If neither file exists, only root is
+      allowed to submit a job.  If only cron.deny exists and is empty,
+      global usage is permitted.  The allow/deny files consist of one user
+      name per line.
+
+
