@@ -1,5 +1,3 @@
-static char *rcsid="$Id$";
-
 /**
  **  File: cgiwrap.c
  **  Purpose: Main program for cgiwrap
