@@ -1,5 +1,3 @@
-/* rcsid: $Id$ */
-
 #include "config.h"		/* Generated by Configure */
 
 #include <stdio.h>		/* For passing data into called script */
