@@ -1,5 +1,3 @@
-/* rcsid: $Id$ */
-
 /**
  **  File: debug.h
  **  Purpose: Prototypes and defines for routines in debug.c
