@@ -1,5 +1,3 @@
-static char *rcsid="$Id$";
-
 /**
  **  File: fetch.c
  **  Purpose: Routines to extract the user and script name from request
