@@ -1,5 +1,3 @@
-/* rcsid: $Id$ */
-
 /**
  **  File: fetch.h
  **  Purpose: Prototypes for routines in fetch.c
