@@ -1,4 +1,3 @@
-/* rcsid: $Id$ */
 
 #if !defined(HAS_STRDUP)
 char *strdup(char *string);
